my second commit

--- a/profile.html
+++ b/profile.html
@@ -36,6 +36,9 @@
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRZsKOS1_Xq9qEYEImYJC3RmAC5YH6rY6fmf2r-0VOE7mbbkl1DyGhBhTArv4ioZPMAWFo&usqp=CAU"  class ="image">
                     <p>HASSAN</p>
                 </li>
+                <li>
+                    <img src="../me/me.jpg" class="image" >
+                </li>
             </ul>
         </div>
 
